--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
 	              <artifactId>maven-surefire-plugin</artifactId>
 	              <version>2.20</version>
 	              <configuration>
+	                  <skipTests>${skip.surefire.tests}</skipTests>
 	                  <parallel>all</parallel>
 	                  <useUnlimitedThreads>true</useUnlimitedThreads>
 	              </configuration>
